CppEditor: Get rid of an unneeded use of std::tolower()

Task-number: QTCREATORBUG-28612
Change-Id: I48a912b202ef0f0687c39600a14653d75df28215
Reviewed-by: hjk <hjk@qt.io>